		Updating NetBSD/pmax install instructions: 6.1.4 -> 7.1.1.
20180209	Making OpenBSD/luna88k print some more things, by faking
		more things in dev_luna88k.cc.
20180214	Minor fixes for LUNA 88K.
		88K disasm shows "nop" instead of "or r0,r0,r0" now.
		OpenBSD/luna88k 5.2 (an older version) now reaches userland
		:-) issuing syscalls, but not 6.2 yet :-( and since no
		interrupts are implemented yet, it doesn't really do much.
		Removing notes about "legacy modes" in the documentation,
		since it was too ugly and those modes are pretty much the
		main focus of end-users of GXemul still.
20180219	Basic interrupt controller and timer interrupt for LUNA88K.
20180220	Minor progress on the LUNA88K framebuffer.
20180223	Serial controller interrupt progress for LUNA88K; some
		interaction can be done with OpenBSD/luna88k ramdisk user-
		land but it is shaky.
20180302	Fixing bug in dev_mp when returning amount of memory (it
		was truncated to 32 bits). Found during YCX5 development.
20180410	Adding a dummy skeleton for an Intel i960 CPU component
		using the new framework.
20180418	Adding dummy skeletons for a Cyclone/VH (i960VH) evaluation
		board, and the HP 700/RX X-terminal (i960CA).
20180419	Implementing basic disassembly of some i960 instructions
		(only the CTRL group so far), and basic register dump
		functionality.
20180420	i960 MEM and COBR instruction group disassembly has now
		been implemented.
20180422	Adding a simple b.out file loader for i960 binaries, but
		no support for symbols yet.
		Beginning to add some REG instruction disassembly (i960).
20180423	Implementing the rest of i960CA REG instruction disasm.
20180424	Beginning to implement i960 dyntrans instructions (a simple
		'b' branch and a simple 'mov lit,reg' so far).
20180428	Implementing happy case of an "lda" i960 instruction which has
		an extra displacement word, i.e. non-standard dyntrans
		instruction length.
20180503	Implementing i960 lda with immediate offset.